src-tauri/compile_error_pure.txt
    Checking tauri-app v0.1.0 (C:\H-ASSASSIN\Codeing\Electron Projects\PDFusion\src-tauri)
warning: unused imports: `ObjectId` and `Stream`
 --> src\pdf.rs:1:31
  |
1 | use lopdf::{Document, Object, ObjectId, Dictionary, Stream};
  |                               ^^^^^^^^              ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Content` and `Operation`
 --> src\pdf.rs:2:22
  |
2 | use lopdf::content::{Content, Operation};
  |                      ^^^^^^^  ^^^^^^^^^

error[E0609]: no field `resources_id` on type `lopdf::Document`
  --> src\pdf.rs:28:15
   |
28 |     final_doc.resources_id = (max_id, 0);
   |               ^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `version`, `trailer`, `reference_table`, `objects`, `max_id` ... and 4 others

warning: unused variable: `pages_root_id`
   --> src\pdf.rs:101:13
    |
101 |         let pages_root_id = (1_000_000, 0); // Arbitrary high ID to avoid conflict? Or use max_id
    |             ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_pages_root_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0609`.
warning: `tauri-app` (lib) generated 3 warnings
error: could not compile `tauri-app` (lib) due to 1 previous error; 3 warnings emitted
